# fin-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/mcp_inspector/free_tier/: README.md  market_movers_provider_error.json  market_movers_success.json  market_movers_validation_error.json  price_history_provider_error.json  price_history_success.json  price_history_validation_error.json  ticker_data_provider_error.json  ticker_data_success.json  ticker_data_validation_error.json
src/fin_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/servers/: __init__.py
src/servers/free_tier/: __init__.py  config.py  exceptions.py  logging_config.py  schemas.py  server.py  tools.py  validation.py
src/servers/pro_tier/: __init__.py  analytics_tools.py  cache.py  config.py  exceptions.py  logging_config.py  schemas.py  sentiment_fetchers.py  sentiment_tools.py  server.py
tests/servers/free_tier/: test_tools.py
tests/servers/pro_tier/: __init__.py  test_analytics_tools.py  test_sentiment_tools.py
