[project]
name = "fin-mcp"
version = "0.1.0"
description = "Free Tier market data MCP tools"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "yfinance>=0.2.38",
    "pandas>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "freezegun>=1.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.2",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q --strict-markers --disable-warnings -m 'not slow and not integration'"
markers = [
    "slow: marks tests as slow-running.",
    "integration: marks tests that hit external services.",
]
timeout = 5

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["servers"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_any_unimported = false
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# Disable strict type checking for tests (MockContext compatibility)
ignore_errors = true
